# horse-race-sim

./: README.md  pyproject.toml
race_sim/: combo_racer.py  main.py  race.py  racer.py
