[tool.poetry]
name = "horse-race-sim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

# [tool.poetry.dev-dependencies]


[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
rope = "^0.18.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
